[gd_scene load_steps=2 format=3 uid="uid://bcuf3vebli6bh"]

[ext_resource type="Script" uid="uid://cavfxn06l5vh" path="res://books/toggleBook/ToggleBookContainer.gd" id="1_sd023"]

[node name="ToggleBookContainer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_sd023")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
flat = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CoverTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 180)
layout_mode = 2
mouse_filter = 2
expand_mode = 1

[node name="NameRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2

[node name="TagsScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TagsFlowContainer" type="FlowContainer" parent="MarginContainer/VBoxContainer/TagsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
